clusters/cosmos/infra/multicluster/headscale/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: headscale-ingress
spec:
 tls:
 - hosts:
   - headscale.cosmos.cboxlab.com
   secretName: headscale-tls-secret
 rules:
 - host: headscale.cosmos.cboxlab.com
   http:
     paths:
     - backend:
         service:
           name: headscale
           port:
             name: http
       path: /
       pathType: Prefix
